--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@ Error message and password prompt
 
 <li>Education</li>
 
+<li>General advice</li>
+
 <li>Google books</li>
 
 <li>Grace in academia</li>
@@ -5679,7 +5681,7 @@ Categories</pre>
 <div modified="20150105195927793" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="Haskell [[Main page]] Categories" title="$:/StoryList">
+<div list="[[Advice for a mathlete]] [[General advice]] [[Main page]] Categories" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -5696,11 +5698,11 @@ Categories</pre>
     }
 }</pre>
 </div>
-<div created="20150105201218555" modified="20150105201222639" title="$:/temp/NewTagName">
+<div created="20150105201218555" modified="20151020021501628" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
-<div created="20150126153012617" modified="20150913130430379" title="$:/temp/search">
-<pre>Haskell</pre>
+<div created="20150126153012617" modified="20151020021333100" title="$:/temp/search">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="A clean theme that emphasises individual tiddlers" name="Snow White" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.7">
 <pre>{
@@ -5832,14 +5834,14 @@ See [[Tabarrok's article|http://www.cato-unbound.org/2012/11/12/alex-tabarrok/wh
 # Criticism: &quot;&quot;&quot;MOOCs&quot;&quot;&quot; are a threat to universities. A: ''Universities are not made obsolete, but they need to adapt their educational practices by focusing on doing in-class what cannot be done online.'' In fact, rather than having its professors waste time to develop a circuits course that has already been done (they could if they think they would do it better than &quot;&quot;&quot;EdX&quot;&quot;&quot;), they could use these online materials, and then just add labs, discussions, focus on special topics, and so forth not present in the &quot;&quot;&quot;MOOC&quot;&quot;&quot;. This brings a &amp;#8220;remixing&amp;#8221; spirit to curriculum design.
 # A more serious issue with &quot;&quot;&quot;MOOCs&quot;&quot;&quot; is that they are geared towards students who already &amp;#8220;know&amp;#8221; how to learn, and do not motivate students who are struggling or disillusioned with learning in the first place.</pre>
 </div>
-<div changecount="10" created="20130917234000000" creator="Holden" modified="20150121152853116" modifier="Holden" tags="math advice under_construction" title="Advice for a mathlete" type="text/vnd.tiddlywiki">
+<div changecount="10" created="20130917234000000" creator="Holden" modified="20151020021440905" modifier="Holden" tags="math advice under_construction" title="Advice for a mathlete" type="text/vnd.tiddlywiki">
 <pre>Back to [[Math]]. (Note: I'd be happy to talk if you still have questions; just shoot me an email.)
 
 //UNDER CONSTRUCTION//
 
 !1 Advice for high-schoolers (including, but not limited to, mathletes)
 
-First, you should read [[Links for life]]: some general advice for high school and college. ''DO IT.''
+First, you should read [[Links for life]]: some general advice for high school and college. ''DO IT.'' (NEW: [[General advice]])
 
 ''Q: Why should I care about other stuff besides math competitions? I just want to focus on math.''
 
@@ -6169,6 +6171,24 @@ See my presentation on ''lifelong learning'' for general advice, with lots of re
 
 !Other
 * Some classroom observations http://holdenlee.wordpress.com/2013/04/08/classroom-observations/</pre>
+</div>
+<div created="20151020021337414" modified="20151020021503637" tags="advice life" title="General advice">
+<pre>Read. You can't count on others to tell you what to read. There are many books I've read that changed my views that I wished I'd read earlier. Reading for pleasure is good, but also read strategically. Go out of your way to figure out a list of books that are important and for what reasons, and read some of them. Sometimes adults will just tell you to read, but not try and pick the best books for you to read. In particular, adults have a tendency to just push story-books they feel are age-appropriate. Read nonfiction, or fiction with Views. Don't believe what you read. Read things you disagree with. Read Ayn Rand and Karl Marx, and then form your own opinion. Especially read about big ideas. Read life advice by successful people. Your brain will feel exploded afterwards, and you'll feel paralyzed for a while afterwards (if you're anything like me), so maybe don't do this too often, but you want to know all your options and possible strategies early. Find things to follow, like blogs with ideas, debates. You don't have to follow them consistently - I regularly go for extended periods where I consume little media, because that makes it easier to focus - but know they're there.
+
+Strategize your distractions. It's hard to be productive every minute - and distractions smoothen life out. The key is to have high-quality distractions. Ex. reddit front page rarely has anything meaningful, you could instead look at subreddits that pertain to your interest. Find the distractions that are meaningful to you, like webcomics and blogs. These are high-quality distractions. Low-quality distractions are things like checking your email every few minutes.
+
+Your job isn't to know what you want to do: it's to get yourself exposed to interesting things, to things that are beautiful and to things that give you power (ex. knowledge). 
+
+Develop taste. Don't just do things. Don't just play computer games. If you like computer games, play good computer games. Find the games that have really creative storytelling, or really good mechanics, or are revolutionary in some way. 
+
+Do projects. Have experience in coming up with an idea or initiative you want to pursue, and then pursuing it - rather than just doing something someone told you to do.
+
+Develop a love for learning. A love for learning means you'll learn, even when no one recognizes you for it - when you don't win competitions, when you don't get certificates or badges. Some people were born with this love; some had it instilled in them from their family or community. But even if you haven't, you can still develop it. It's not easy. Pride is dangerous: beware of taking too much pleasure in doing something well. A litmus test is would you still do it if you didn't get the recognition? Many people hit a wall in college: they didn't realize all the hidden motivations that compelled them to learn (ex. being better than other people), and these motivations dry up (ex. they are suddenly not better than everyone else around them). The solution is to have motivations to learn that won't dry up. Find them. It's fine to be motivated by pride and competition - but make sure you have something more substantial to lean on. Get off your crutches early. Know that love for learning often doesn't come automatically, but it is a very rewarding thing to develop.
+
+Learn different things. You don't have to cover everything - you can't cover everything. But learn different things. The first step in learning something, unless you have a good sense of it already, is not to pick a random textbook and start reading. People are passionate about subjects for a reason - figure out what it is that makes them tick. Figure out what is &quot;good work&quot; in the subject. Figure out what are the books, classes, exercises, and projects that will help you learn the subject, based on your experience. This used to be much harder, but now there's the Internet. There are many recommendations online, many online courses and course materials to pursue. Sometimes the official sources - ex. textbooks - are hard to penetrate. Find other sources - blog posts, videos, whatever. There are many roads. Don't dismiss entire subjects as &quot;not interesting.&quot; You can dismiss them as &quot;not my focus right now.&quot; Think of every subject and contemplate on it a little. What are the &quot;classics&quot;? Why do people study them? Ask these questions. Figure out why these subjects are interesting, why they are worth learning, and then you can make your decisions on what to focus on learning. It's much, much easier to explore things earlier than later. When your interests change, don't force them to stay on the same track. Keep your life plans flexible. When you have doubts about whether you want to do X or Y, remember that doubts grow when suppressed. Doubts want to either annihilate the object of doubt, or be annihilated. So try out that other thing, and you'll know which is the outcome. Either is better than suppressed doubt.
+
+Write everything down. Figure out (after some experimentation) a consistent way to take notes so that you can search up anything important you've ever learned. (I recommend workflowy, but there are many options: OneNote, EverNote, etc.) You can learn things halfway and then pick up where you left off. &quot;Disorganization&quot; is not a unchangeable trait. Fix it. People underutilize the organizational and remembering power of computers, or even paper and pencil. Carry a notebook, and write down things to remember. Don't just absorb and copy. Write things in your own words. Write down your questions. Questions are the knives that cut through the curtain of life. Find opportunities to ask the questions that you write down. Write down the answers when you find them.
+</pre>
 </div>
 <div changecount="1" created="20140903160900000" creator="Holden" modifier="Holden" tags="quote unlinked" title="Google books" type="text/x-tiddlywiki">
 <pre>&quot;We're not scanning these books to be read by humans. We're scanning these books to be read by computers.&quot;</pre>
