--- a/index.html
+++ b/index.html
@@ -5688,7 +5688,7 @@ Error message and password prompt
 <div modified="20151108014501206" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="Categories [[Open gestalts]] [[Ideas to implement]] [[Main page]]" title="$:/StoryList">
+<div list="[[Main page]] Categories" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -5708,8 +5708,8 @@ Error message and password prompt
 <div created="20150105201218555" modified="20151020021501628" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
-<div created="20150126153012617" modified="20151108050010451" title="$:/temp/search">
-<pre>quote</pre>
+<div created="20150126153012617" modified="20151108052726626" title="$:/temp/search">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="A clean theme that emphasises individual tiddlers" name="Snow White" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.7">
 <pre>{
@@ -6807,7 +6807,7 @@ We know some things can't be done, but it doesn't stop us from trying -- I think
 2801 Friendship was the very essence of love&amp;#8230; If love begins in friendship,... it has to adhere to the principles of friendship as Austen understood them&amp;#8230; The lover's highest role, like the friend's, is to help you to become a better person: push you, if necessary, even at the risk of wounded feelings.
 </pre>
 </div>
-<div changecount="19" created="20130917210800000" creator="Holden" modified="20151108051906601" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
+<div changecount="19" created="20130917210800000" creator="Holden" modified="20151108052711804" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
 <pre>&lt;html&gt;&lt;img src=&quot;https://dl.dropboxusercontent.com/u/27883775/wiki/pics/me2.jpg&quot; alt=&quot;web&quot;&gt;&lt;/html&gt;
 
 [[Categories]]
@@ -6826,8 +6826,8 @@ We know some things can't be done, but it doesn't stop us from trying -- I think
 
 !Road map
 
-* If you'd like to find about about my &lt;b&gt;work&lt;/b&gt;, look in the [[Resume]], [[Math]], and [[My teaching]] sections. There you can find all the papers and math notes I've written up. FIXME
-* If you're a &lt;b&gt;math student&lt;/b&gt;, I encourage you to look at all the math notes I have available, especially the number theory textbook, and contribute if you can. (I would REALLY appreciate it - no matter how little. Typing math takes a lot of time.) I've also put up some general advice for learning math, managing time, etc. (still under construction)
+* If you'd like to find about about my &lt;b&gt;work&lt;/b&gt;, look in the [[Research]], [[Math notes]], and [[My teaching]] sections. There you can find all the papers and math notes I've written up.
+* If you're a &lt;b&gt;math student&lt;/b&gt;, I encourage you to look at all the [[Math notes]] I have available, especially the number theory textbook, and contribute if you can. (I would REALLY appreciate it - no matter how little. Typing math takes a lot of time.) I've also put up some general advice for learning math, managing time, etc. (still under construction)
 * If you're a &lt;b&gt;writer&lt;/b&gt; (or wannabe-writer, like me), you can browse my fiction in the [[My writing]] section. Again, I'd love comments on any of this (and conversations are even better than comments). I'm always looking for people to share things with so feel free to drop me a line on anything you've written, too.
 * If you're want to &lt;b&gt;find out about me as a person&lt;/b&gt; or &lt;b&gt;learn my views on a variety of topics&lt;/b&gt; then browse around, and keep reading below.
 * If you like to see &lt;b&gt;what's new&lt;/b&gt;, view my blog at http://holdenlee.wordpress.com.
