--- a/index.html
+++ b/index.html
@@ -5688,7 +5688,7 @@ Error message and password prompt
 <div modified="20151108014501206" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="[[Main page]] Categories" title="$:/StoryList">
+<div list="Categories [[My writing]] [[Main page]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -7354,7 +7354,7 @@ I&amp;#8217;ve written lectures for...
 * Gliya - My three interests (math, education, and writing) came together here -- I wrote geometry lessons as stories that encouraged creative problem-solving.
 My lectures are available at http://web.mit.edu/~holden1/www/math/notes.htm.</pre>
 </div>
-<div created="20150301145815176" modified="20151108044251506" title="My writing">
+<div created="20150301145815176" modified="20151110021413296" title="My writing">
 <pre>Back to [[Writing]]
 
 Below are stories I have finished and information about ones that I am working on. I'd love to hear comments (including criticisms)! Just send me an email at [[holdenlee@alum.mit.edu|mailto:holdenlee@alum.mit.edu]].
@@ -7367,6 +7367,8 @@ I'm currently gamemaster for [[Into the Dreamworld|https://storium.com/game/into
 * [[Mona|http://holdenlee.github.io/writing/mona.doc]]
 * [[Creature Club|http://holdenlee.github.io/writing/creature-club.doc]] - //I don’t know whether it was the fuzzy black antennys ending in pom-pom balls or the sniffly pink snout or the round glimmery eyes or the two flubby flipper-wings or the simple luxury of round white balloon-like furriness, but once I laid eyes on her I had to have her. In goes the one-dollar bill; the slightest nudge of my hand sends the gripper off, before it jerks to a stop right above the creature. I press the red button and the hook descends, clutching her cotton skull, bouncing her two antennys together as she rises slowly and royally above the mass of face-down rabbits with oversize ears, scorpions with shells of yucky speckled gray-green plastic, fairies with too-orange skin and tight stiff wings. The flashing light bulbs reflect from her eyes, and as she draws to eye level she seems to be looking directly at me and saying, &quot;I knew that I was destined for higher things.&quot;//
 * [[Return to Taiwan|http://holdenlee.github.io/writing/Return%20to%20Taiwan.docx]] - //&quot;We’re so glad you returned to Taiwan,&quot; they all said, like it was where I belonged, like I had been born there too, not just my parents. They waved tearfully, and Liangliang asked, &quot;When’s the next time you’ll return to Taiwan?&quot; Because &quot;going to Taiwan&quot; didn’t have the same ring to it... I returned to Taiwan again, unexpectedly, during the winter of sixth grade. Permanently.//
+* [[Huntress|http://holdenlee.github.io/writing/huntress.docx]] //The girl moved through the long grass. The wind pushed the prairie grasses against her face and wove them into her hair. When she was close enough to see the lion breathing, she hoisted up her iron pike and lunged.
+A hand deftly caught the pike around the middle. A boy had suddenly appeared, sitting astride the lion. He looked at her unblinkingly, his gaze telling her he would not hesitate to kill her, and wrenched the pike from her grasp. She reached for her Assassin’s Knife—just one quick slice at the lion’s chest would suffice—but the boy suddenly thrust her pike towards her, and by reflex she somersaulted backwards, barely avoiding it.//
 * [[Two Sides of the River|https://www.holdenlee/github.io/writing/Two%20sides%20of%20the%20river.docx]]
 
 !Poetry
