--- a/index.html
+++ b/index.html
@@ -5688,7 +5688,7 @@ Error message and password prompt
 <div modified="20151108014501206" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="Categories [[My writing]] [[Main page]]" title="$:/StoryList">
+<div list="Categories [[Main page]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -6036,14 +6036,10 @@ Several books I read when I was a kid I only appreciated when I grew up:
 
 See also [[Links for life]] for some websites that changed my life.</pre>
 </div>
-<div created="20150105195116448" modified="20151108052106861" tags="" title="Categories">
+<div created="20150105195116448" modified="20151112191846847" tags="" title="Categories">
 <pre>* [[Main page]]
 
 * [[About me]]
-
-* [[Likes]]
-
-* [[Views on life]]
 
 * [[Math]] ([[Research]], [[Math notes]])
 
@@ -6052,6 +6048,10 @@ See also [[Links for life]] for some websites that changed my life.</pre>
 * [[Education]]
 
 * [[Reading]]
+
+* [[Likes]]
+
+* [[Views on life]]
 
 * [[Links]]
 
@@ -6807,7 +6807,7 @@ We know some things can't be done, but it doesn't stop us from trying -- I think
 2801 Friendship was the very essence of love&amp;#8230; If love begins in friendship,... it has to adhere to the principles of friendship as Austen understood them&amp;#8230; The lover's highest role, like the friend's, is to help you to become a better person: push you, if necessary, even at the risk of wounded feelings.
 </pre>
 </div>
-<div changecount="19" created="20130917210800000" creator="Holden" modified="20151108052711804" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
+<div changecount="19" created="20130917210800000" creator="Holden" modified="20151112191858443" modifier="Holden" title="Main page" type="text/vnd.tiddlywiki">
 <pre>&lt;html&gt;&lt;img src=&quot;https://dl.dropboxusercontent.com/u/27883775/wiki/pics/me2.jpg&quot; alt=&quot;web&quot;&gt;&lt;/html&gt;
 
 [[Categories]]
@@ -6816,7 +6816,7 @@ We know some things can't be done, but it doesn't stop us from trying -- I think
 
 !Basic Info
 
-* Email: [[holdenlee@alum.mit.edu|mailto:holdenlee@alum.mit.edu]] or [holdenl@princeton.edu|mailto:holdenl@princeton.edu]]
+* Email: [[holdenlee@alum.mit.edu|mailto:holdenlee@alum.mit.edu]] or [[holdenl@princeton.edu|mailto:holdenl@princeton.edu]]
 * Education:
 ** (Current) &lt;a href=&quot;https://www.math.princeton.edu/&quot;&gt;Princeton Univeristy&lt;/a&gt;, Ph.D. program in math 
 **&lt;a href=&quot;http://www.cam.ac.uk/&quot;&gt;																University of 									Cambridge&lt;/a&gt;, 													MAST in Pure 												Math, 2014
