--- a/index.html
+++ b/index.html
@@ -5688,7 +5688,7 @@ Error message and password prompt
 <div modified="20151108014501206" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="Categories [[Main page]]" title="$:/StoryList">
+<div list="[[What I learned from Patrick Winston]] Categories [[Main page]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -5708,8 +5708,8 @@ Error message and password prompt
 <div created="20150105201218555" modified="20151020021501628" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
-<div created="20150126153012617" modified="20151108052726626" title="$:/temp/search">
-<pre></pre>
+<div created="20150126153012617" modified="20151128200824317" title="$:/temp/search">
+<pre>winston</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="A clean theme that emphasises individual tiddlers" name="Snow White" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.7">
 <pre>{
@@ -7835,7 +7835,7 @@ I've taken 4 writing classes, and learned something different from each professo
 ** There is a set of principles for writing: learn them. He teaches a worldbuilding class where he points out those principles for worldbuilding.
 ** Elicit honest and comprehensive feedback. He always tells his students to give thorough line comments on drafts, and criticize like the author is &quot;your best friend&quot; (because that's what good friends do for each other: point out their mistakes). </pre>
 </div>
-<div changecount="9" created="20130917193300000" creator="YourName" modified="20150105205441764" modifier="Holden" tags="Winston life advice" title="What I learned from Patrick Winston" type="text/vnd.tiddlywiki">
+<div changecount="9" created="20130917193300000" creator="YourName" modified="20151128200843222" modifier="Holden" tags="Winston life advice" title="What I learned from Patrick Winston" type="text/vnd.tiddlywiki">
 <pre>Back to [[Views on life]].
 
 See also
@@ -7958,6 +7958,7 @@ During presentations, Winston always has the lights on. &quot;But nobody can see
 A presentation is not a lecture. The main point of a lecture is to teach and the main point of a presentation is to impress.
 
 Winston's &quot;how to speak&quot; talk: http://www.youtube.com/watch?v=VG9_j6VYaKo
+
 !3 Career
 
 Don't be a conspicuous job-climber, i.e. don't keep changing your set of friends. People with the bad kind of ambition keep changing their set of friends. People resent these people, because these people ask you out for lunch just so they can use you for the next step in their plan.
