--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@ Error message and password prompt
 
 <li>Answer in a different medium</li>
 
+<li>Apps, extensions, and shortcuts</li>
+
 <li>Art and questions</li>
 
 <li>Articulating why I do something</li>
@@ -5688,7 +5690,7 @@ Error message and password prompt
 <div modified="20151108014501206" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="[[Ideas to implement]] Categories [[Main page]]" title="$:/StoryList">
+<div list="Categories Links [[Links for writers and readers]] [[Apps, extensions, and shortcuts]] [[Main page]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -5931,6 +5933,47 @@ The song [[Human]], for instance, was a response. One can imagine, also what kin
 &lt;&gt; A poet I met at a slam poetry event said, &quot;People say that poetry doesn't resemble speech. I say, why can't we talk more like poetry?&quot;
 
 See also [[Art and questions]].</pre>
+</div>
+<div created="20151210043625277" modified="20151210050336878" title="Apps, extensions, and shortcuts">
+<pre>Bold means strongly recommended.
+
+Things I find useful.
+
+* Organization/productivity
+** ''Workflowy'' (http://www.workflowy.com): A tree structure is the best way to organize notes.
+** ''Tiddlywiki'' (http://tiddlywiki.com): Together, workflowy and tiddlywiki make up most of my note-taking. 
+** Cogi: Record the highlights of conversations and lectures. https://cogi.com/#/
+** ~FreeMind for mindmapping http://freemind.sourceforge.net/ (See also wisemapping)
+** ~OneNote: I used to use this a lot for free-form notetaking, but now I've switched to workflowy.
+** ~EverNote: I use this for drawing on my tablet. It labels it with the seminar automatically! (It gets the info from google calendar.)
+** Mendeley (https://www.mendeley.com/): for organizing papers. Recently I've been moving away from this and doing management instead using workflowy.
+* Reading/writing
+** ''Scrible'' (http://www.scrible.com/) for highlighting and annotating web pages.
+** oneword, 750words, goodreads: See [[Links for writers and readers]].
+** http://www.mdbg.net/chindict/chindict.php: For showing Chinese texts with pinyin.
+* Health
+** ''f.lux'' (https://justgetflux.com/) to adjust display based on time of day for better sleep
+** ~SleepBot to keep track of sleep. 
+* Other Chrome extensions and bookmarklets
+** Copy all URLs
+** Tab Outliner
+** ~GithubMate: download files directly from github.
+** Google scholar
+** ~AdBlockPlus
+** ~LockTab: prevent accidentally closing a tab.
+** Case-sensitive find (http://www.labnol.org/internet/case-sensitive-find/28186/)
+* Other
+** ''Spotify'': free music, use to explore new music.
+** Paint.NET: Better version of Paint.
+** Open-Sankore (http://open-sankore.org/): whiteboard software
+** ~DesktopOK (http://www.softwareok.com/?seite=Freeware/DesktopOK): restore desktop, useful when projectors screw it up.
+** BES (http://mion.faireal.net/BES/) for limiting CPU consumption by programs
+** emacs (https://www.gnu.org/software/emacs/) for coding
+
+Shortcuts:
+
+* A variety of scripts I use: https://github.com/holdenlee/scripts
+* Windows keyboard shortcuts: http://stackoverflow.com/questions/52676/favorite-windows-keyboard-shortcuts</pre>
 </div>
 <div changecount="2" created="20141216210300000" creator="Holden" modified="20150105195937070" modifier="Holden" tags="art unlinked" title="Art and questions" type="text/vnd.tiddlywiki">
 <pre>Good art doesn't make an argument, it presents a dilemma.
@@ -6659,7 +6702,7 @@ Other activities
 * DDR
 * Go hiking in national parks in the summer. Our family used to go on cross-country trips in our RV (Winnebago Warrior), once going as far as Alaska. I've been to all but 3 states (Louisiana, Mississippi, and Alabama).</pre>
 </div>
-<div changecount="10" created="20130917194800000" creator="YourName" modified="20150105205820943" modifier="Holden" tags="links" title="Links" type="text/vnd.tiddlywiki">
+<div changecount="10" created="20130917194800000" creator="YourName" modified="20151210043620841" modifier="Holden" tags="links" title="Links" type="text/vnd.tiddlywiki">
 <pre>Subcategories:
 
 * [[Links for math]]
@@ -6668,6 +6711,7 @@ Other activities
 * [[Blogs and sites I follow]]
 * [[Links for fun]]
 * [[Links for life]]
+* [[Apps, extensions, and shortcuts]]
 
 Other links
 
