--- a/index.html
+++ b/index.html
@@ -5690,7 +5690,7 @@ Error message and password prompt
 <div modified="20151108014501206" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="Categories Links [[Links for writers and readers]] [[Apps, extensions, and shortcuts]] [[Main page]]" title="$:/StoryList">
+<div list="[[Apps, extensions, and shortcuts]] Categories [[Main page]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -5934,7 +5934,7 @@ The song [[Human]], for instance, was a response. One can imagine, also what kin
 
 See also [[Art and questions]].</pre>
 </div>
-<div created="20151210043625277" modified="20151210050336878" title="Apps, extensions, and shortcuts">
+<div created="20151210043625277" modified="20151211204134972" title="Apps, extensions, and shortcuts">
 <pre>Bold means strongly recommended.
 
 Things I find useful.
@@ -5964,6 +5964,7 @@ Things I find useful.
 ** Case-sensitive find (http://www.labnol.org/internet/case-sensitive-find/28186/)
 * Other
 ** ''Spotify'': free music, use to explore new music.
+** ''John's Background Switcher'' (http://johnsad.ventures/software/backgroundswitcher/): Changes desktop image every 30 minutes (or whenever) using pictures from Flickr (etc.). Good source of beautiful randomness.
 ** Paint.NET: Better version of Paint.
 ** Open-Sankore (http://open-sankore.org/): whiteboard software
 ** ~DesktopOK (http://www.softwareok.com/?seite=Freeware/DesktopOK): restore desktop, useful when projectors screw it up.
