--- a/index.html
+++ b/index.html
@@ -5934,7 +5934,7 @@ The song [[Human]], for instance, was a response. One can imagine, also what kin
 
 See also [[Art and questions]].</pre>
 </div>
-<div created="20151210043625277" modified="20151211204134972" title="Apps, extensions, and shortcuts">
+<div created="20151210043625277" modified="20151214184919307" title="Apps, extensions, and shortcuts">
 <pre>Bold means strongly recommended.
 
 Things I find useful.
@@ -5942,6 +5942,7 @@ Things I find useful.
 * Organization/productivity
 ** ''Workflowy'' (http://www.workflowy.com): A tree structure is the best way to organize notes.
 ** ''Tiddlywiki'' (http://tiddlywiki.com): Together, workflowy and tiddlywiki make up most of my note-taking. 
+** ''Tenclips'' (http://www.paludour.net/TenClips.html): A clipboard holding 10 different things using Ctrl+Number.
 ** Cogi: Record the highlights of conversations and lectures. https://cogi.com/#/
 ** ~FreeMind for mindmapping http://freemind.sourceforge.net/ (See also wisemapping)
 ** ~OneNote: I used to use this a lot for free-form notetaking, but now I've switched to workflowy.
