--- a/index.html
+++ b/index.html
@@ -5934,7 +5934,7 @@ The song [[Human]], for instance, was a response. One can imagine, also what kin
 
 See also [[Art and questions]].</pre>
 </div>
-<div created="20151210043625277" modified="20151214184919307" title="Apps, extensions, and shortcuts">
+<div created="20151210043625277" modified="20160101004308665" title="Apps, extensions, and shortcuts">
 <pre>Bold means strongly recommended.
 
 Things I find useful.
@@ -5944,11 +5944,13 @@ Things I find useful.
 ** ''Tiddlywiki'' (http://tiddlywiki.com): Together, workflowy and tiddlywiki make up most of my note-taking. 
 ** ''Tenclips'' (http://www.paludour.net/TenClips.html): A clipboard holding 10 different things using Ctrl+Number.
 ** Cogi: Record the highlights of conversations and lectures. https://cogi.com/#/
+** Mnemosyne: A universal system for memorization, with spaced recall. http://mnemosyne-proj.org/
 ** ~FreeMind for mindmapping http://freemind.sourceforge.net/ (See also wisemapping)
 ** ~OneNote: I used to use this a lot for free-form notetaking, but now I've switched to workflowy.
 ** ~EverNote: I use this for drawing on my tablet. It labels it with the seminar automatically! (It gets the info from google calendar.)
 ** Mendeley (https://www.mendeley.com/): for organizing papers. Recently I've been moving away from this and doing management instead using workflowy.
 * Reading/writing
+** ''Feedly'' (https://feedly.com/) for organizing RSS feeds - get all the blog posts, etc. you follow in one place
 ** ''Scrible'' (http://www.scrible.com/) for highlighting and annotating web pages.
 ** oneword, 750words, goodreads: See [[Links for writers and readers]].
 ** http://www.mdbg.net/chindict/chindict.php: For showing Chinese texts with pinyin.
@@ -5956,13 +5958,15 @@ Things I find useful.
 ** ''f.lux'' (https://justgetflux.com/) to adjust display based on time of day for better sleep
 ** ~SleepBot to keep track of sleep. 
 * Other Chrome extensions and bookmarklets
+** Momentum (personalized new tab page)
 ** Copy all URLs
-** Tab Outliner
+** Tab Outliner (so you don't have to keep too many tabs open)
 ** ~GithubMate: download files directly from github.
 ** Google scholar
 ** ~AdBlockPlus
 ** ~LockTab: prevent accidentally closing a tab.
 ** Case-sensitive find (http://www.labnol.org/internet/case-sensitive-find/28186/)
+** Lazarus form recovery
 * Other
 ** ''Spotify'': free music, use to explore new music.
 ** ''John's Background Switcher'' (http://johnsad.ventures/software/backgroundswitcher/): Changes desktop image every 30 minutes (or whenever) using pictures from Flickr (etc.). Good source of beautiful randomness.
